[package]
name = "fe-hir-analysis"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Provides HIR semantic analysis for Fe lang"

[dependencies]
bitflags = "2.8"
cranelift-entity = "0.115"
derive_more.workspace = true
either = "1.13"
ena = { version = "0.14", features = ["persistent"] }
if_chain = "1.0"
itertools = "0.14"
num-bigint.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
smallvec.workspace = true
smallvec1.workspace = true
thin-vec.workspace = true
tracing.workspace = true

common.workspace = true
test-utils.workspace = true
hir.workspace = true
url.workspace = true

[dev-dependencies]
camino.workspace = true
codespan-reporting.workspace = true
dir-test.workspace = true
# TODO move cs diagnostics utils
driver.workspace = true
test-utils.workspace = true
