[package]
name = "fe-hir"
version = "0.26.0"
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Provides HIR definition and lowering for Fe lang"

[dependencies]
salsa.workspace = true
derive_more = "0.99"
cranelift-entity = "0.91"
num-bigint = "0.4"
num-traits = "0.2.15"
camino = "1.1.4"
rustc-hash = "1.1.0"
smallvec = "1.10.0"
paste = "1.0"
dot2 = "1.0"

common = { path = "../common2", package = "fe-common2" }
parser = { path = "../parser2", package = "fe-parser2" }
