[package]
name = "fe-hir"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Provides HIR definition and lowering for Fe lang"

[dependencies]
camino.workspace = true
cranelift-entity = { workspace = true }
derive_more.workspace = true
dot2 = { workspace = true }
num-bigint.workspace = true
num-traits = { workspace = true }
paste.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
smallvec.workspace = true

common.workspace = true
parser.workspace = true
