[package]
name = "fe-language-server"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "An LSP language server for Fe lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa.workspace = true
codespan-reporting = "0.11"
act-locally = "0.1.1"
hir = { path = "../hir", package = "fe-hir" }
hir-analysis = { path = "../hir-analysis", package = "fe-hir-analysis" }
camino = "1.1.4"
common = { path = "../common2", package = "fe-common2" }
anyhow = "1.0.71"
serde_json = "1.0.96"
rowan = "0.15.10"
fxhash = "0.2.1"
patricia_tree = "0.6.2"
glob = "0.3.1"
url = "2.4.1"
tokio = { version = "1.35.1", features = ["full", "io-std", "tracing", "net"] }
tokio-macros = "2.2.0"
futures = "0.3.28"
rust-embed = "8.3.0"
futures-batch = "0.6.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-lsp = { git = "https://github.com/micahscopes/async-lsp", branch = "pub-inner-type-id" }
tower = "0.4.13"
serde = "1.0.204"
clap = { version = "4.5.18", features = ["derive"] }
async-std = "1.13.0"
async-compat = "0.2.4"
tracing-tree = "0.4.0"

[dev-dependencies]
fe-compiler-test-utils = { path = "../test-utils" }
dir-test = "0.1"
