[package]
name = "fe-language-server"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "An LSP language server for Fe lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-locally = { workspace = true }
anyhow = { workspace = true }
async-compat = { workspace = true }
async-lsp = { workspace = true }
async-std = { workspace = true }
camino.workspace = true
clap.workspace = true
codespan-reporting = { workspace = true }
futures = { workspace = true }
futures-batch = { workspace = true }
glob.workspace = true 
patricia_tree = { workspace = true }
rust-embed = { workspace = true }
rustc-hash.workspace = true
salsa.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "io-std", "tracing", "net"] }
tokio-macros = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
url = { workspace = true }

common.workspace = true
hir.workspace = true
hir-analysis.workspace = true
parser.workspace = true

[dev-dependencies]
test-utils.workspace = true
dir-test.workspace = true
