[package]
name = "fe-language-server"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "An LSP language server for Fe lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-locally = "0.1.1"
anyhow = "1.0.95"
async-compat = "0.2.4"
async-lsp = { git = "https://github.com/micahscopes/async-lsp", branch = "pub-inner-type-id" }
async-std = "1.13.0"
camino.workspace = true
clap.workspace = true
codespan-reporting = "0.11"
futures = "0.3.31"
futures-batch = "0.6.1"
glob.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full", "io-std", "tracing", "net"] }
tower = "0.5.2"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
url = "2.5.4"

common.workspace = true
driver.workspace = true
hir.workspace = true
hir-analysis.workspace = true
parser.workspace = true
tempfile = "3.20.0"

[dev-dependencies]
test-utils.workspace = true
dir-test.workspace = true
